added some text

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>My First Github Repo</title>
 </head>
 <body>
-    
+    <h1>My first Page</h1>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis necessitatibus ut possimus blanditiis illo id harum repellendus est, labore dicta quisquam provident eius nesciunt voluptates impedit molestias minima dolor veritatis quibusdam corporis quasi vel suscipit dignissimos? Quam aliquam perspiciatis asperiores minima, accusantium deserunt voluptate quas distinctio dicta praesentium, neque modi iure ratione adipisci voluptas tenetur qui atque illo! Ullam reprehenderit explicabo voluptatem delectus obcaecati enim! Consequatur officiis debitis quidem repellat asperiores eius? Incidunt, quis possimus cumque fugit quas aut. Nihil, natus. Quae ipsa cupiditate suscipit aliquam hic laudantium? Eos doloribus molestiae, soluta perspiciatis saepe rem earum beatae odit quaerat facilis.</p>
 </body>
 </html>
